[tool.poetry]
name = "py-combinator"
version = "0.1.0"
description = ""
authors = ["ikasoba <57828948+ikasoba@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_combinator"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
