[tool.poetry]
name = "pycombinator"
version = "0.4.0"
description = ""
authors = ["ikasoba <57828948+ikasoba@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pycombinator"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
